# crabdrive

./: .dockerignore  .gitignore  CONTRIBUITING  CONTRIBUTING  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  compose.yaml  crabdrive.sqlite  rustfmt.toml  schema_output.txt  tatus
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml  docker-image.yaml
.github/actions/: cq.yaml
.github/workflows/: docker-publish.yml  pr-cq.yaml
client/: Cargo.toml  index.html
client/src/: constants.rs  display_utils.rs  main.rs  model.rs  theme.rs
client/src/api/: accept_share.rs  auth.rs  create_file.rs  create_folder.rs  delete.rs  delete_node.rs  download_file.rs  get_accepted_nodes.rs  get_accessible_path.rs  get_children.rs  get_root_node.rs  get_self_info.rs  get_shared_node_encryption_key.rs  get_shared_with.rs  get_single_node.rs  get_trash_node.rs  get_versions.rs  mod.rs  move_node.rs  path_between_nodes.rs  path_to_root.rs  rename_node.rs  share_node.rs
client/src/api/auth/: login.rs  logout.rs  mod.rs  register.rs
client/src/api/requests/: auth.rs  chunk.rs  file.rs  folder.rs  mod.rs  node.rs  share.rs
client/src/components/: accepted_nodes_provider.rs  account_sider.rs  content_frame.rs  file_creation_button.rs  file_details.rs  file_download_button.rs  file_history_button.rs  file_history_dialog.rs  file_list.rs  file_selection_dialog.rs  file_tree.rs  folder_bottom_bar.rs  folder_content.rs  folder_creation_button.rs  folder_creation_dialog.rs  folder_selection_dialog.rs  folder_view.rs  input_dialog.rs  mod.rs  modify_node_menu.rs  node_details.rs  node_list.rs  node_share_button.rs  path_breadcrumb.rs  path_provider.rs  resource_wrapper.rs  revision_list.rs  shared_view.rs  trash_empty_button.rs  trash_item_delete_button.rs  trash_item_restore_button.rs  trash_provider.rs  trash_view.rs
client/src/components/basic/: custom_dialog.rs  folder_selection_dialog.rs  input_dialog.rs  mod.rs  resource_wrapper.rs
client/src/components/data_provider/: accepted_nodes_provider.rs  children_provider.rs  mod.rs  path_provider.rs  revisions_provider.rs  trash_provider.rs
client/src/model/: chunk.rs  encryption.rs  mod.rs  node.rs
client/src/pages/: accept_share_page.rs  demo_page.rs  home_page.rs  login_page.rs  mod.rs
client/src/requests/: chunk.rs  file.rs  folder.rs  mod.rs  node.rs
client/src/utils/: auth.rs  browser.rs  encryption.rs  error.rs  file.rs  mod.rs  share.rs  ui.rs
client/src/utils/browser/: local_storage.rs  mod.rs  session_storage.rs
client/src/utils/encryption/: auth.rs  chunk.rs  mod.rs  node.rs  random.rs
common/: Cargo.toml
common/src/: data.rs  encrypted_metadata.rs  encryption_key.rs  iv.rs  lib.rs  node.rs  routes.rs  storage.rs  user.rs  uuid.rs  version.rs
common/src/model/: mod.rs
common/src/payloads/: mod.rs
common/src/payloads/admin/request/: user.rs
common/src/payloads/admin/response/: user.rs
common/src/payloads/auth/request/: login.rs  register.rs
common/src/payloads/auth/response/: info.rs  login.rs  mod.rs  refresh.rs  register.rs
common/src/payloads/node/request/: file.rs  folder.rs  mod.rs  node.rs  share.rs
common/src/payloads/node/response/: file.rs  folder.rs  mod.rs  node.rs  share.rs
docs/: crabdrive-server.yaml  developement.md  features.md  konzept.txt  storage.md
docs/developement/: README.md
docs/pitch/: slides.typ
docs/submission/: ai-usage.md  manual_testing.md  requirements.md  testing.md
server/: Cargo.toml  crabdrive.sqlite  diesel.toml
server/res/: not_found.html
server/res/migrations/2025-12-08-105713-0000_create_users/: down.sql  up.sql
server/res/migrations/2025-12-08-105724-0000_create_folders/: up.sql
server/res/migrations/2025-12-08-105734-0000_create_files/: up.sql
server/res/migrations/initialize_tables/: down.sql  up.sql
server/src/: main.rs
server/src/auth/: claims.rs  mod.rs  secrets.rs
server/src/db/: connection.rs  mod.rs  models.rs  models.rs.txt  operations.rs  schema.rs
server/src/db/operations/: mod.rs  node.rs  revision.rs  share.rs  token.rs  user.rs
server/src/http/: config.rs  middleware.rs  mod.rs  routes.rs  server.rs  state.rs
server/src/http/routes/: mod.rs
server/src/request_handler/: admin.rs  auth.rs  chunk.rs  file.rs  folder.rs  mod.rs  node.rs  share.rs
server/src/storage/: chunk_request_handler.rs  file_request_handler.rs  folder_request_handler.rs  mod.rs  node_request_handler.rs
server/src/storage/file/: file_repository.rs  mod.rs  model.rs
server/src/storage/node/: mod.rs
server/src/storage/node/persistence/: mod.rs  model.rs  node_repository.rs  repository.rs
server/src/storage/node/persistence/model/: encrypted_metadata.rs  mod.rs  node_entity.rs
server/src/storage/revision/: mod.rs
server/src/storage/revision/persistence/: mod.rs  revision_repository.rs
server/src/storage/revision/persistence/model/: mod.rs  revision_entity.rs
server/src/storage/share/: mod.rs
server/src/storage/share/persistence/: mod.rs  share_repository.rs
server/src/storage/share/persistence/model/: mod.rs  share_entity.rs
server/src/storage/version/persistence/: mod.rs  version_repository.rs
server/src/storage/version/persistence/model/: mod.rs  version_entity.rs
server/src/storage/vfs/: file_repository.rs  mod.rs  model.rs
server/src/storage/vfs/backend/: mod.rs
server/src/storage/vfs/backend/c3/: mod.rs  model.rs  utils.rs
server/src/storage/vfs/backend/sfs/: mod.rs  test.rs
server/src/test/: mod.rs  request_handler.rs  utils.rs
server/src/test/routes/: auth.rs  file.rs  folder.rs  mod.rs  node.rs  share.rs
server/src/test/storage/: c3.rs  mod.rs
server/src/test/utils/: builder.rs  context.rs  entities.rs  mod.rs  user.rs
server/src/tests/: mod.rs
server/src/user/: admin_request_handler.rs  auth_request_handler.rs  mod.rs
server/src/user/auth/: claims.rs  mod.rs  secrets.rs
server/src/user/persistence/: mod.rs  model.rs  repository.rs  user_repository.rs
server/src/user/persistence/model/: encryption_key.rs  mod.rs  token.rs  user_entity.rs
src/: schema.rs
src/db/: mod.rs  (+2 more)
(+9 files in other folders)
