[workspace]
resolver = "3"
members = [
    "client",
    "common",
    "server"
]

[workspace.package]
description = "A cloud storage platform"
repository = "https://github.com/mtfwvi/crabdrive"
rust-version = "1.85.0"
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
anyhow = "1.0.100"
axum = "0.8.7"
bytes = "1.11.0"
chrono = "0.4.42"
clap = "4.5.54"
confique = { version = "0.4.0", git = "https://github.com/mtfwvi/confique", branch = "template-more-config-options" }
console_error_panic_hook = "0.1.7"
crabdrive-common = { path = "common" }
dotenvy = "0.15.7"
leptos = "0.8.3"
nanoid = "0.4.0"
pretty_assertions = "1.4.1"
serde = "1.0.228"
test-case = "3.3.1"
thaw = "0.5.0-beta"
tokio = "1.48.0"
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = "0.3.22"
tracing-web = "0.1.3"
uuid = "1.19.0"
formatx = "0.2.4"
