[workspace]
resolver = "3"
members = [
    "client",
    "common",
    "server"
]

[workspace.package]
description = "A cloud storage platform"
repository = "https://github.com/mtfwvi/crabdrive"
rust-version = "1.85.0"
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
anyhow = "1.0.100"
axum = "0.8.7"
bytes = "1.11.0"
chrono = { version = "0.4.42", features = ["serde"]}
clap = "4.5.54"
confique = { version = "0.4.0", git = "https://github.com/mtfwvi/confique", branch = "template-more-config-options" }
console_error_panic_hook = "0.1.7"
crabdrive-common = { path = "common" }
diesel = { version = "=2.2.12", default-features = false }
diesel_migrations = "2.2.0"
dotenvy = "0.15.7"
leptos = "=0.8.3"
libsqlite3-sys = { version = "=0.35.0", features = ["bundled"] }
nanoid = "0.4.0"
pretty_assertions = "1.4.1"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
test-case = "3.3.1"
tempfile = "3"
thaw = "0.5.0-beta"
tokio = "1.48.0"
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = "0.3.22"
tracing-web = "0.1.3"
uuid = { version = "1.19.0", features = ["serde", "v4"]}
formatx = "0.2.4"
wasm-bindgen-test = "0.3.58"
web-sys = "0.3.83"
wasm-bindgen-futures = "0.4.56"
wasm-bindgen = "0.2.106"
serde_json = "1.0.149"
serde-wasm-bindgen = "0.6"