[workspace]
resolver = "3"
members = [
    "client",
    "common",
    "server"
]

[workspace.package]
description = "A cloud storage platform"
repository = "https://github.com/mtfwvi/crabdrive"
rust-version = "1.85.0"
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
anyhow = "1.0.102"
argon2 = "0.5.3"
async-trait = "0.1.89"
axum = "0.8.7"
axum-extra = "0.12.5"
axum-test = "18.7.0"
base64 = "0.22.1"
bytes = "1.11.1"
chrono = { version = "0.4.44", features = ["serde"]}
clap = "4.5.60"
confique = { version = "0.4.0", git = "https://github.com/mtfwvi/confique", branch = "template-more-config-options" }
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
crabdrive-common = { path = "common" }
diesel = { version = "=2.2.12", default-features = false }
diesel_migrations = "2.2.0"
dotenvy = "0.15.7"
http-body-util = "0.1.3"
icondata_core = "0.1.0"
icondata_mdi = "0.1.0"
jsonwebtoken = "10.3.0"
leptos = "=0.8.3"
leptos_router = "=0.8.3"
leptos-use = "=0.16.3" # Keep at 0.16.3 for compatibility with leptos 0.8.3
libsqlite3-sys = { version = "=0.35.0", features = ["bundled"] }
moka = { version = "0.12.13", features = ["future", "logging"] }
nanoid = "0.4.0"
pretty_assertions = "1.4.1"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde-wasm-bindgen = "0.6"
tempfile = "3"
test-case = "3.3.1"
thaw = "0.5.0-beta"
thiserror = "2.0.18"
tokio = "1.48.0"
tower-http = { version = "0.6.8" }
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = "0.3.22"
tracing-web = "0.1.3"
uuid = { version = "1.21.0", features = ["serde", "v4"]}
wasm-bindgen = "0.2.106"
wasm-bindgen-futures = "0.4.56"
wasm-bindgen-test = "0.3.62"
web-sys = "0.3.83"