[package]
name = "crabdrive-client"
version = "0.1.0"
edition = "2024"

[dependencies]
console_error_panic_hook = { workspace = true }
leptos = { workspace = true, features = ["csr"] }
thaw = { workspace = true, features = ["csr"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-web = { workspace = true }
web-sys = { workspace = true, features = ["Request", "RequestInit", "RequestMode", "Response", "Window", "Blob", "SubtleCrypto", "Crypto", "CryptoKey", "AesGcmParams"] }
wasm-bindgen-futures = { workspace = true }
wasm-bindgen = { workspace = true }
crabdrive-common = { workspace = true }
formatx = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true, features = ["serde"]}
serde = { workspace = true, features = ["derive"]}
anyhow = { workspace = true }

[dev-dependencies]
wasm-bindgen-test = { workspace = true }
