[package]
name = "crabdrive-client"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
argon2 = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
console_error_panic_hook = { workspace = true }
icondata_core = {workspace = true}
icondata_mdi = {workspace = true}
leptos = { workspace = true, features = ["csr"] }
leptos_router = { workspace = true }
leptos-use = { workspace = true, features = ["use_preferred_dark", "use_clipboard"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thaw = { workspace = true, features = ["csr"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-web = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true, features = [
    "AesGcmParams",
    "AesKeyGenParams",
    "Blob",
    "Crypto",
    "CryptoKey",
    "DomException",
    "File",
    "FileList",
    "Location",
    "Response",
    "Request",
    "RequestInit",
    "RequestMode",
    "SubmitEvent",
    "SubtleCrypto",
    "Url",
    "Window"
] }

crabdrive-common = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
test-case = { workspace = true }
wasm-bindgen-test = { workspace = true }
