[package]
name = "crabdrive-common"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
pretty_assertions = { workspace = true }
test-case = { workspace = true }

[dependencies]
chrono = { workspace = true, features = ["serde"] }
diesel = { workspace = true, features = ["sqlite"] }
serde = { workspace = true }
uuid = { workspace = true }
