[package]
name = "crabdrive-server"
version = "0.1.0"
edition = "2024"

[dependencies]
uuid = { workspace = true, features = ["serde"] }
anyhow = { workspace = true }
axum = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true, features = ["cargo"] }
confique = { workspace = true, features = ["toml"] }
diesel = { workspace = true, default-features = true, features = ["sqlite", "r2d2", "chrono", "returning_clauses_for_sqlite_3_35"] }
diesel_migrations = { workspace = true }
dotenvy = { workspace = true }
formatx = { workspace = true }
nanoid = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt", "json"] }
tracing-appender = { workspace = true }

crabdrive-common = { workspace = true, features = ["server"] }
rusqlite = { version = "0.35", features = ["bundled"] }

[dev-dependencies]
pretty_assertions = { workspace = true }
rand = { workspace = true }
