[package]
name = "crabdrive-server"
version = "0.1.0"
edition = "2024"

[dependencies]
uuid = { workspace = true, features = ["serde"] }
anyhow = { workspace = true }
axum = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true, features = ["cargo"] }
confique = { workspace = true, features = ["toml"] }
crabdrive-common = { workspace = true, features = ["server"] }
diesel = { workspace = true, default-features = true, features = ["sqlite", "r2d2", "chrono", "returning_clauses_for_sqlite_3_35"] }
diesel_migrations = { workspace = true }
dotenvy = { workspace = true }
http-body-util = { workspace = true }
libsqlite3-sys = { workspace = true } # Needed implicitly by Diesel
nanoid = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = {  workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tower-http = {workspace = true, features = ["fs", "cors", "catch-panic"]}
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt", "json"] }
tracing-appender = { workspace = true }
jsonwebtoken = { workspace = true, features = ["rust_crypto"]}
axum-extra = { workspace = true, features = ["typed-header"]}
argon2 = { workspace = true, features = ["alloc"]}

[dev-dependencies]
axum-test = { workspace = true }
pretty_assertions = { workspace = true }
rand = { workspace = true }