[package]
name = "crabdrive-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
argon2 = { workspace = true, features = ["alloc"]}
async-trait = { workspace = true }
axum = { workspace = true, features = ["macros"] }
axum-extra = { workspace = true, features = ["cookie", "typed-header"]}
bytes = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true, features = ["cargo"] }
confique = { workspace = true, features = ["toml"] }
crabdrive-common = { workspace = true, features = ["server"] }
dashmap = { workspace = true }
diesel = { workspace = true, default-features = true, features = ["sqlite", "r2d2", "chrono", "returning_clauses_for_sqlite_3_35"] }
diesel_migrations = { workspace = true }
dotenvy = { workspace = true }
http-body-util = { workspace = true }
jsonwebtoken = { workspace = true, features = ["rust_crypto"]}
libsqlite3-sys = { workspace = true } # Needed implicitly by Diesel
moka = { workspace = true }
nanoid = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = {  workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tower-http = {workspace = true, features = ["fs", "cors", "catch-panic", "compression-zstd"]}
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt", "json"] }
tracing-appender = { workspace = true }
uuid = { workspace = true, features = ["serde"] }
sha2 = { workspace = true }

[dev-dependencies]
axum-test = { workspace = true }
pretty_assertions = { workspace = true }
rand = { workspace = true }
test-case = { workspace = true }
